--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <!-- Src Test -->
 <script src="src/osbTvFilmGuide.directive.js"></script>
-<script src="src/osbTvFilmGuideTemplate.js"></script>
+<script src="src/osbTvFilmGuide.directive.tpl.js"></script>
 <!-- Dist Test -->
-<!--<script src="dist/osbNewsFeedReader.directive.js"></script>
-<script src="dist/src/osbNewsFeedReaderTemplate.js"></script>-->
+<!--<script src="dist/osbNewsFeedReader.js"></script>-->
 <script>
     'use strict';
     angular.module('osbFilmTvGuide', ['ngSanitize', 'LocalStorageModule', 'sistem3.osb-film-tv-guide'])
