Adding scrollmagic logic

--- a/src/osbTvFilmGuide.tpl.html
+++ b/src/osbTvFilmGuide.tpl.html
@@ -29,6 +29,12 @@
                 </div>
             </li>
         </ul>
+        <div id="filmLoader">
+            <div>
+                <i class="fa fa-spinner fa-spin"></i>
+                <p>Loading...</p>
+            </div>
+        </div>
     </section>
     <div class="clearfix"></div>
     <section class="filmTvGuide__modal" ng-if="filmTvGuide.modal.show">
