--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+<script src="bower_components/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
 <!-- Src Test -->
 <script src="src/osbTvFilmGuide.directive.js"></script>
 <script src="src/osbTvFilmGuide.directive.tpl.js"></script>
