Renaming files and upping version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 
     <!-- Src Test -->
-    <link rel="stylesheet" href="src/css/osbTvFilmGuide.css">
+    <link rel="stylesheet" href="src/css/osbFilmTvGuide.css">
     <!-- Dist Test -->
     <!--<link rel="stylesheet" href="dist/osbGeoWeather.css">-->
 </head>
@@ -24,8 +24,8 @@
 <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script src="bower_components/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
 <!-- Src Test -->
-<script src="src/osbTvFilmGuide.directive.js"></script>
-<script src="src/osbTvFilmGuide.directive.tpl.js"></script>
+<script src="src/osbFilmTvGuide.directive.js"></script>
+<script src="src/osbFilmTvGuide.directive.tpl.js"></script>
 <!-- Dist Test -->
 <!--<script src="dist/osbNewsFeedReader.js"></script>-->
 <script>
