Fixing Dep injection

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <!-- Src Test -->
     <link rel="stylesheet" href="src/css/osbFilmTvGuide.css">
     <!-- Dist Test -->
-    <!--<link rel="stylesheet" href="dist/osbGeoWeather.css">-->
+    <!--<link rel="stylesheet" href="dist/osbFilmTvGuide.css">-->
 </head>
 
 <body>
 <div ng-view>
-    <osb-tv-film-guide></osb-tv-film-guide>
+    <osb-film-tv-guide></osb-film-tv-guide>
 </div>
 
 <script src="bower_components/angular/angular.min.js"></script>
@@ -24,10 +24,10 @@
 <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script src="bower_components/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
 <!-- Src Test -->
-<script src="src/osbFilmTvGuide.directive.js"></script>
-<script src="src/osbFilmTvGuide.directive.tpl.js"></script>
+<!--<script src="src/osbFilmTvGuide.directive.js"></script>
+<script src="src/osbFilmTvGuide.directive.tpl.js"></script>-->
 <!-- Dist Test -->
-<!--<script src="dist/osbNewsFeedReader.js"></script>-->
+<script src="dist/osbFilmTvGuide.js"></script>
 <script>
     'use strict';
     angular.module('osbFilmTvGuide', ['ngSanitize', 'LocalStorageModule', 'sistem3.osb-film-tv-guide'])
